# cloney-documentation

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: auto_deploy.yaml  tessting.yaml  testing.yaml
cloney-cli/: index.html
cloney-template-repositories/: index.html
commands/: index.html
commands/clone/: index.html
commands/docs/: index.html
commands/dry-run/: index.html
commands/info/: index.html
commands/start/: index.html
commands/validate/: index.html
commands/version/: index.html
creators/: index.html
creators/accessing-template-variables/: index.html
creators/cloney-metadata-file/: index.html
creators/creating-your-first-template-repository/: index.html
creators/dynamic-file-generation/: index.html
creators/functions/: index.html
creators/ghost-files/: index.html
creators/go-template-tutorials/: index.html
creators/reusable-blocks/: index.html
creators/visual-studio-code-extension/: index.html
docker-image/: index.html
docs/: cloney-cli.md  cloney-template-repositories.md  docker-image.md  getting-started.md  index.md  visual-studio-code-extension.md
docs/commands/: clone.md  docs.md  dry-run.md  index.md  info.md  start.md  validate.md  version.md
docs/creators/: accessing-template-variables.md  cloney-metadata-file.md  cloney-template-functions.md  index.md  (+6 more)
getting-started/: index.html
layouts/: custom.yaml
scripts/: extra-unused.js
search/: search_index.json
stylesheets/: extra.css
users/: index.html
visual-studio-code-extension/: index.html
(+75 files in other folders)
