[tool.poetry]
name = "cloney-docs"
version = "0.1.0"
description = "Documentation site for Cloney."
authors = [
  "Arthur Sudbrack Ibarra"
]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.4.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
